# lvgl_test

./: .gitmodules  CMakeLists.txt
src/: main.cpp
